overflow cut fix in cart

--- a/src/pages/Cart.css
+++ b/src/pages/Cart.css
@@ -38,6 +38,7 @@
   display: flex;
   justify-content: space-around;
   min-height: 80vh;
+  overflow: hidden;
 }
 
 .cart-container .order-summary {
